--- a/BookBlend.Api/BookBlend.Api.csproj
+++ b/BookBlend.Api/BookBlend.Api.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Carter" Version="8.2.1" />
+        <PackageReference Include="Coravel" Version="6.0.0" />
         <PackageReference Include="FluentValidation" Version="11.10.0" />
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
         <PackageReference Include="MediatR" Version="12.4.1" />
@@ -25,6 +26,13 @@
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0-rc.2.24473.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
         <PackageReference Include="TagLibSharp" Version="2.3.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Features\AudiobookConversion\" />
+      <Folder Include="Features\AudiobookManagement\" />
+      <Folder Include="Features\FileManagement\MetadataManagement\" />
+      <Folder Include="Features\LibrarySettings\LibraryPaths\" />
     </ItemGroup>
 
 </Project>
