--- a/BookBlend.Api/BookBlend.Api.csproj
+++ b/BookBlend.Api/BookBlend.Api.csproj
@@ -30,8 +30,7 @@
 
     <ItemGroup>
       <Folder Include="Features\AudiobookConversion\" />
-      <Folder Include="Features\AudiobookManagement\" />
-      <Folder Include="Features\FileManagement\MetadataManagement\" />
+      <Folder Include="Features\AudiobookManagement\MetadataManagement\" />
     </ItemGroup>
 
 </Project>
