--- a/BookBlend.Api/BookBlend.Api.csproj
+++ b/BookBlend.Api/BookBlend.Api.csproj
@@ -26,10 +26,13 @@
         <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.0-rc.2.24473.5" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.9.0" />
         <PackageReference Include="TagLibSharp" Version="2.3.0" />
+        <PackageReference Include="Xabe.FFmpeg" Version="5.2.6" />
+        <PackageReference Include="Xabe.FFmpeg.Downloader" Version="5.2.6" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Features\AudiobookManagement\MetadataManagement\" />
+      <Folder Include="Migrations\" />
     </ItemGroup>
 
 </Project>
